# pymai

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.cursor/: rules
.cursor/rules/: coding-standard.mdc  module-development.mdc  project-specific.mdc  python-styleguide.mdc  testing-rules.mdc  tool-use.mdc
.github/workflows/: sphinx-docs.yml  tests.yml
docs/: Makefile  README.md  architecture.md  architecture.rst  conf.py  index.rst
examples/: __init__.py  basic_usage.py  context_manager_demo.py  invisible_execution_demo.py  simple_demo.py
hooks/: char_cleanup.py
mai/: __init__.py
mai/layers/: __init__.py  composite.py  module.py
mai/types/: __init__.py  context.py
tests/: __init__.py  test_layers.py
tests/layers/: test_composite.py  test_module.py
tests/types/: test_context.py
